# rust-microservice-template

./: Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
migrations/2023-05-21-000001_create_test_objects/: down.sql  up.sql
src/: db.rs  main.rs  migrations.rs
src/models/: mod.rs  test_object.rs
