[package]
name = "your_project_name"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
juniper = { version = "0.16.1", features = ["chrono", "uuid"] }
juniper_rocket = "0.9.0"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
