[package]
name = "your_project_name"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
log = "0.4.22"
juniper = { version = "0.16.1", features = ["chrono", "uuid"] }
juniper_rocket = "0.9.0"
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
